--- a/index.html
+++ b/index.html
@@ -14,86 +14,53 @@
       <h1>Einführung in das CMS Wordpress</h1>
       <p>nachdem du das <a href="https://fabianwidukindpenzkofer.de/wp-admin">Dashboard</a> betreten hast, und deinen Username und Passwort eingegeben hast, kannst du folgendes tun:</p>
       <ul>
-        <li>Werke erstellen <a href="#werke">1.1 <i class="fas fa-arrow-right"></i></a></li>
-        <li>Events für die Startseite "Jetzt" erstellen <a href="#events">2.1 <i class="fas fa-arrow-right"></i></a></li>
-        <li>Vitaeinträge für die vergangenen Veranstaltungen erstellen <a href="#vita">3.1 <i class="fas fa-arrow-right"></i></a></li>
-      </ul><em>diese 3 Elemente sind Orange unterlegt <span class="orange"> like this </span></em>
-      <ul>
-        <li>viele andere Sachen <a href="#extras">4.1 <i class="fas fa-arrow-right"></i></a></li>
+        <li>Posts erstellen <a href="#posts">1.1 <i class="fas fa-arrow-right"></i></a></li>
+        <li>Meta Descriptions mit Yoast erstellen <a href="#yoast">2.1 <i class="fas fa-arrow-right"></i></a></li>
       </ul>
       <h2>1.1 Ein neues Werk erstellen:</h2>
-      <ol id="werke">
-        <li>Klicke Schaltfläche <span class="accent">Werke</span></li>
-        <li>Klicke Schaltfläche <span class="accent">Add Werke</span></li><em>Willkommen beim sogenannten "Gutenberg Editor"</em>
-        <li>Geb den Titel des Werkes ein</li>
-        <li>klicke auf das Plus-symbol um einen "neuen Block zu erstellen" und im Feld "image" eingeben</li><em>dieser "Block" kann alles mögliche beinhalten (Text, Audio, Bilder, Listen, Gallerien usw.)</em>
+      <ol id="posts">
+        <li>Klicke Schaltfläche <span class="accent">Posts</span></li>
+        <li>Klicke Schaltfläche <span class="accent">Add New</span></li><em>Willkommen beim sogenannten "Gutenberg Editor"</em>
+        <li>Geb den Titel des Posts ein</li><em>dieser erscheint unter dem Slider in der Einzelansicht</em>
+        <li>Klicke in das Feld "Start writing or type / to choose a block"</li>
+        <li>Schreibe den Text</li>
         <div class="tip">
           <p>Googlesuche nach "Gutenberg Editor Blocks" für mehr Infos</p>
         </div>
-        <li>Icon <span class="accent">Image</span> anklicken</li>
-        <li>Schaltfläche <span class="accent">Upload</span> oder <span class="accent">Media Library</span> auswählen</li><em>falls das Bild noch nicht geuploadet wurde "Upload", falls du das schonmal getan hast befindet es sich bereits in deiner "Media Library"</em>
-        <li>gewünschtes Bild anwählen und Schaltfläche (rechts unten) <span class="accent">Select</span> klicken</li><em>unter dem Bild erscheint nun "Write caption" (falls nicht, Bild anklicken)</em>
-        <li><em>"write caption"</em> anklicken und deine Bildbeschreibung eingeben</li>
-        <li>Schaltfläche <span class="accent">Publish</span> klicken</li>
       </ol>
-      <video controls="controls" src="https://res.cloudinary.com/seba123/video/upload/v1596979025/QbO972ZxQD_o8btu4.mp4"></video>
-      <h2>1.2 Das Werk dem Werke-Menü zuordnen:</h2>
+      <h2>1.2 Füge das Bild für die Vorschau auf der Seite "WORK" ein</h2>
       <ol>
-        <li>Aufs Dashboard zurück, zb. durch klick aufs Wordpresslogo links oben</li>
-        <li>Schaltfläche <span class="accent">Appereance</span> NICHT klicken, sondern hovern und aufs Untermenü <span class="accent">Menus</span> klicken</li>
-        <li>in der linken Spalte <span class="accent">Werke</span> auswählen - Dropdown Menü öffnet sich</li>
-        <li>Checkbox für gewünschten Post klicken und auf auf <span class="accent">Add to Menu</span> klicken</li>
-        <li>nun erscheint dein "Werk" in der rechten Spalte, ziehe den Block an die gewünschte Stelle unter <span class="accent">Werke</span>, leicht eingerückt (wie die anderen Werke)</li><em>achte darauf, dass der Einzug gleich ist wie bei den Anderen, ansonsten hast du versagt - sowohl physisch als auch psychisch</em>
-        <div class="tip">
-          <p>du kannst die Anordnung, an welcher Stelle die Werke nacher im Menü erscheinen durch drag&drop verändern, einfach die Blöcke vertikal rumschieben</p>
-        </div>
-        <li>Schaltfläche <span class="accent">Save Menu</span> klicken</li>
-        <li>DONE!</li>
+        <li>unter dem Reiter Featured Image findest du die Schaltfläche "Set featured Image"</li>
+        <li>wähle ein Bild aus deiner Medialibrary</li>
+        <li>Fertig!</li>
+        <li>falls du ein Video als Vorschaubild auf der Seite "WORK" haben möchstest, füge den Namen des Videos unter "Video Thumbnail" ein, den du von Cloudinary bekommen hast.</li>
       </ol>
-      <video controls="controls" src="https://res.cloudinary.com/seba123/video/upload/v1596979023/iLQ1B4bKNP_xkyx9e.mp4"></video>
-      <h2>2.1 Ein neues Event erstellen (Seite "Jetzt")</h2>
-      <ol id="events">
-        <li>Klicke Schaltfläche <span class="accent">Events</span></li>
-        <li>Klicke Schaltfläche <span class="accent">Add New</span></li>
-        <li>Geb den Titel des Werkes ein</li>
-        <li>für die Mitwirkenden klicke das Plussymbol, suche "list" und geb die Namen ein</li>
-        <li>klicke in den Block darunter und "start writing", hier sind deiner Fantasie keine Grenzen gesetzt</li>
-        <li>Geb das Datum, die Location und die Adresse ein (die Felder stehen unten) unter "More Fields"</li>
+      <h2>1.3 Eine Gallerie (Slider) für die Einzelansicht des Posts hinzufügen </h2>
+      <ol>
+        <li>klicke auf "Slider Images" und auf die Schaltfläche <span class="accent">Add File</span></li>
+        <li>wähle die Bilder aus der Medialibrary, die du möchtest aus</li>
+        <div class="tip">
+          <p>du kannst die Anordnung der Bilder im Slider durch verschieben mit der Maus verändern</p>
+        </div>
+        <div class="tip">
+          <p>mit gedrückter STRG-Taste, kannst du mehrere Bilder auswählen</p>
+        </div>
+        <li>für ein Video im Slider geb den Dateinamen wie in "Video Thumbnail" beschrieben bei "Slider Video" ein</li>
         <li>Schaltfläche <span class="accent">Publish</span> klicken</li>
         <li>DONE!</li>
       </ol>
-      <h2>3.1 Vitaeinträge erstellen</h2>
-      <ol id="vita">
-        <li>Ziemlich das Gleiche wie bei Events</li>
-        <li>für die Bilder kannst du dich auch entscheiden anstatt "image", "gallery" zu verwenden</li>
-        <li>Plussymbol klicken, "gallery" suchen</li>
-        <li>Bilder aus deiner "Media Library" auswählen (mehrere anklicken ist möglich)</li>
-        <li>in der rechten Spalte kannst du unter "columns" wählen, wie viele Bilder pro Reihe erscheinen sollen</li>
-        <li>den switch mit "Crop images" musst du testen, manchmal gut, manchmal kagge, weil wichtige Bildteile eventuell gecropt werden</li>
-        <li>Schaltfläche <span class="accent">Publish</span> klicken</li>
-        <li>DONE!</li>
-        <div class="tip">
-          <p>Probier einfach mal mit den verschiedenen "Gutenberg Blöcken" rum, was da so abgeht, kannst dir unter <span class="accent">Preview</span> das jederzeit anschauen, ist allerdings nicht immer 100% das, was du nacher bekommst</p>
-        </div>
-        <figcaption>Vitaeintrag erstellen (gilt auch für Events)</figcaption>
+      <video controls="controls" src="https://res.cloudinary.com/seba123/video/upload/v1598276272/cemcako_wp_tut_main.mp4"></video>
+      <h2>2.1 Metadescriptions für die Pages erstellen</h2>
+      <ol id="yoast">
+        <li>Schaltfläche <span class="accent">Pages</span> klicken</li>
+        <li>Gewünschte Seite anklicken</li>
+        <li>runterscrollen zu "Google Preview"</li><em>falls das Yoast Menü nicht sichtbar ist, das kleine Dreieck daneben klicken, siehe Video</em>
+        <li>Schaltfläche "Edit snippet" klicken</li>
+        <li>Text eingeben</li>
+        <li>Schaltfäche <span class="accent">Update</span> klicken</li>
+        <li>Fertig!</li>
       </ol>
-      <video controls="controls" src="https://res.cloudinary.com/seba123/video/upload/v1596991895/YhQPGIdEXr_op73uc.mp4"></video>
-      <h2>4.1 Sonstiges, Extras, Hämorrhoiden</h2>
-      <ol id="extras">
-        <li>Einträge löschen (im Fall von Werke auch den Eintrag im Menü löschen!)</li>
-        <figcaption>Einträge löschen am Beispiel von Werke</figcaption>
-      </ol>
-      <video controls="controls" src="https://res.cloudinary.com/seba123/video/upload/v1596991896/ZJgOg4rN0E_bgmjfh.mp4"></video>
-      <ol>
-        <li>Metadescription einer Seite hinzufügen</li>
-        <figcaption>mit Yoast der Hauptseite eine Metadescritption hinzufügen</figcaption>
-      </ol>
-      <video controls="controls" src="https://res.cloudinary.com/seba123/video/upload/v1597082599/7b2CHvvxy1_gdvthv.mp4"></video>
-      <ol>
-        <div class="tip">
-          <p>das funktioniert mit jeder Seite, die Zeichenlänge sollte sich so auf 150-170 Zeichen beschränken, wird von Yoast aber auch angezeigt</p>
-        </div>
-      </ol>
+      <video controls="controls" src="https://res.cloudinary.com/seba123/video/upload/v1598277302/cemcako_wp_tut_metadesc.mp4"></video>
     </div>
     <footer>
       <p>Made with <img class="wine" src="assets/img/wine.svg"> by <a href="https://schaal.design">schaal.design</a></p>
