--- a/index.html
+++ b/index.html
@@ -61,6 +61,14 @@
         <li>Fertig!</li>
       </ol>
       <video controls="controls" src="https://res.cloudinary.com/seba123/video/upload/v1598277302/cemcako_wp_tut_metadesc.mp4"></video>
+      <h2>2.2 Bild der Metadescription hinzufügen</h2>
+      <ol>
+        <li>Schaltfläche "SEO" hovern und "Social" klicken</li><em>bei Accounts kannst du auch dein ganzes Social-Media Gedöns mal eingeben</em>
+        <li>dann auf Facebook klicken</li>
+        <li>unter "Default settings" bei "image URL" Schaltfläche Upload Image "klicken"</li>
+        <li>Fertig!</li>
+      </ol>
+      <video controls="controls" src="https://res.cloudinary.com/seba123/video/upload/v1598908625/cemcako_wp_tut_og-image.mp4"></video>
     </div>
     <footer>
       <p>Made with <img class="wine" src="assets/img/wine.svg"> by <a href="https://schaal.design">schaal.design</a></p>
